kubernetes/apps/default/echo/config/http-route.sops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - echo.krapulax.dev
  rules:
    - backendRefs:
        - name: echo
          port: 8080
sops:
  age:
    - recipient: age1saea3t7l67lavg0ardepzys6egp50g82uvks98pk53xdlj57uf8sa2arcs
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSdVltaHJKM1ZhcGFNNW0v
[...]
        Fp0BHfDWvlDnI/jlJVVJC/pd/m+WJJgJ+i+tQXuzlr/PHTD4+FVECA==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-16T19:35:52Z"
  mac: ENC[AES256_GCM,data:dY6cDdREaNVSW6f6m7SllxUVtlaTxqWNA+5c+DVldb35Bv8kmj3d62zAo8O1ImWzEViYgL++C2ODhXkasv67CXY8hiuxPii4ujHDzcX/wo3oLR5TGDRg38rbImptYWZU/uOfvN7vTd3wuUDTonRE97SSwuAXZ4Kjqwc4jWeePsA=,iv:3jIcygAenfhPvZNSsv2FLIlkUAJY2Y03x32/RVR4VEs=,tag:51mOcYqr2XlX8SYve83SKg==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.1
